// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm should render LoginForm disabled 1`] = `
<form
  action="#"
  className="login__form form"
  method="post"
  onSubmit={[Function]}
>
  <fieldset
    disabled={true}
    style={
      Object {
        "border": "none",
        "padding": "0",
      }
    }
  >
    <div
      className="login__input-wrapper form__input-wrapper"
    >
      <label
        className="visually-hidden"
      >
        Email
      </label>
      <input
        className="login__input form__input"
        name="email"
        onChange={[Function]}
        placeholder="Email"
        required={true}
        type="email"
        value="keks@gmail.com"
      />
    </div>
    <div
      className="login__input-wrapper form__input-wrapper"
    >
      <label
        className="visually-hidden"
      >
        Password
      </label>
      <input
        className="login__input form__input"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        required={true}
        type="password"
        value="SecretCatPass"
      />
    </div>
    <button
      className="login__submit form__submit button"
      disabled={true}
      type="submit"
    >
      Sign in
    </button>
  </fieldset>
</form>
`;

exports[`LoginForm should render LoginForm filled with data 1`] = `
<form
  action="#"
  className="login__form form"
  method="post"
  onSubmit={[Function]}
>
  <fieldset
    disabled={false}
    style={
      Object {
        "border": "none",
        "padding": "0",
      }
    }
  >
    <div
      className="login__input-wrapper form__input-wrapper"
    >
      <label
        className="visually-hidden"
      >
        Email
      </label>
      <input
        className="login__input form__input"
        name="email"
        onChange={[Function]}
        placeholder="Email"
        required={true}
        type="email"
        value="keks@gmail.com"
      />
    </div>
    <div
      className="login__input-wrapper form__input-wrapper"
    >
      <label
        className="visually-hidden"
      >
        Password
      </label>
      <input
        className="login__input form__input"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        required={true}
        type="password"
        value="SecretCatPass"
      />
    </div>
    <button
      className="login__submit form__submit button"
      disabled={false}
      type="submit"
    >
      Sign in
    </button>
  </fieldset>
</form>
`;

exports[`LoginForm should render LoginForm with initial state 1`] = `
<form
  action="#"
  className="login__form form"
  method="post"
  onSubmit={[Function]}
>
  <fieldset
    disabled={false}
    style={
      Object {
        "border": "none",
        "padding": "0",
      }
    }
  >
    <div
      className="login__input-wrapper form__input-wrapper"
    >
      <label
        className="visually-hidden"
      >
        Email
      </label>
      <input
        className="login__input form__input"
        name="email"
        onChange={[Function]}
        placeholder="Email"
        required={true}
        type="email"
        value=""
      />
    </div>
    <div
      className="login__input-wrapper form__input-wrapper"
    >
      <label
        className="visually-hidden"
      >
        Password
      </label>
      <input
        className="login__input form__input"
        name="password"
        onChange={[Function]}
        placeholder="Password"
        required={true}
        type="password"
        value=""
      />
    </div>
    <button
      className="login__submit form__submit button"
      disabled={false}
      type="submit"
    >
      Sign in
    </button>
  </fieldset>
</form>
`;
